--- a/cv2.ipynb
+++ b/cv2.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,7 @@
     "inter = np.linspace(0, 1, 100)\n",
     "y = sp.lambdify(x, u)\n",
     "y_1 = sp.lambdify(x, sum([sol[i]*x**(i+1) for i in range(n)]))\n",
+    "# https://www.w3schools.com/python/python_lists_comprehension.asp pro pochopeni syntax\n",
     "plt.plot(inter, y_1(inter))\n",
     "plt.plot(inter, y(inter))\n",
     "plt.legend(['aproximacion', 'real'])\n",
