--- a/mkp_projekt.ipynb
+++ b/mkp_projekt.ipynb
@@ -28,7 +28,7 @@
     "6.  **Separace členů s $w(x)$ a známých členů:** Ponecháme členy s $w$ a jeho derivacemi na levé straně a ostatní (známé) členy převedeme na pravou stranu.\n",
     "    $$ -k w''(x) + p w'(x) + q w(x) = f(x) + k u_b''(x) - p u_b'(x) - q u_b(x) $$\n",
     "\n",
-    "7.  **Definice $f_{new}(x)$:** Pravá strana této rovnice představuje novou \"zatěžovací\" funkci pro diferenciální rovnici pro $w(x)$. Označíme ji $f_{new}(x)$.\n",
+    "7.  **Definice $f_{new}(x)$:** Pravá strana této rovnice představuje novou funkci pro diferenciální rovnici pro $w(x)$. Označíme ji $f_{new}(x)$.\n",
     "    $$ f_{new}(x) = f(x) + k u_b''(x) - p u_b'(x) - q u_b(x) $$\n",
     "\n",
     "Nyní řešíme novou úlohu pro $w(x)$:\n",
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
