--- a/mkp_projekt.ipynb
+++ b/mkp_projekt.ipynb
@@ -47,7 +47,7 @@
     "s homogenními okrajovými podmínkami $w(0) = 0$ a $w(1) = 0$.\n",
     "Provedeme přenásobení testovacími funkcemi z $ H_0^1 (I)$ a integraci přes $I$.\n",
     "$$\\int_I -kw''v +\\int_I p w'v +\\int_I qwv = \\int_I f_n v$$\n",
-    "Provedeme klasické per-partes, jelikož $w$ je nulové na koncích, tak řešení bude:\n",
+    "Provedeme klasické per-partes, jelikož $w,v$ jsou nulové na koncích, tak řešení bude:\n",
     "$$\\int_I kw'v' +\\int_I p w'v +\\int_I qwv = \\int_I f_n v$$\n",
     "\n",
     "Po vyřešení je třeba zpětně dopočítat $u$, které už bude žít na prostoru splňujícím dirichletovy podmínky"
